# Entwine

./: README.md  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: bepinex.rs  config.rs  lib.rs  main.rs  settings.rs  version.rs
src/lib/: api.ts  types.ts
src/lib/components/: BepInExSettings.svelte  ConfigEditor.svelte  InstalledModCard.svelte  ModCard.svelte  ModConfigEditor.svelte  SetupWizard.svelte  Sidebar.svelte  VersionManager.svelte
src/lib/components/pages/: BrowsePage.svelte  ConfigPage.svelte  InstalledPage.svelte  SettingsPage.svelte
src/lib/components/ui/: ContentHeader.svelte  ErrorBanner.svelte
src/routes/: +page.svelte
